# client-server-database

./: CMakeLists.txt  README.md  client.cpp  database.cpp  server.cpp
include/: database.h  defs.h
